--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
     postgres:
         image: postgres:15
-        container_name: postgres_container
+        container_name: postgres
         environment:
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -17,6 +17,12 @@ services:
         depends_on:
             - postgres
         environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+            POSTGRES_HOST: postgres
+            POSTGRES_PORT: 5432
+            POLYGON_API_KEY: ${POLYGON_API_KEY}
             AIRFLOW__CORE__EXECUTOR: LocalExecutor
             AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
             AIRFLOW__CORE__FERNET_KEY: ${YOUR_FERNET_KEY}
@@ -39,6 +45,12 @@ services:
         depends_on:
             - postgres
         environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+            POSTGRES_HOST: postgres
+            POSTGRES_PORT: 5432
+            POLYGON_API_KEY: ${POLYGON_API_KEY}
             AIRFLOW__CORE__EXECUTOR: LocalExecutor
             AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
             AIRFLOW__CORE__FERNET_KEY: ${YOUR_FERNET_KEY}
