--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-psycopg2-binary==2.9.7
+psycopg2-binary==2.9.6
 requests==2.32.3
-statsmodels==0.14.0
-pandas==2.0.3
+statsmodels==0.14.4
+pandas==2.2.3
+pmdarima==2.0.4
+numpy==1.24.4
+sqlalchemy==2.0.37
